--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 <h4>ryuto.of@outlook.jp</h4>
 <h5>ゲームバグや不具合に関するご連絡のみ受け付けております。心配な方は</h5>
 <h5>以下のフォームからご送信いただくことも可能です。</h5>
+<h5　href="https://forms.gle/xxAepJCasGwDDqS96">フォームにアクセス</h5>
 <br>
 <li>SNS</li>
 <button style="background-color: cyan;"><a href="https://x.com/DennouWorkshop"><h4>X(旧ツイッター)</h4></a></button>
 <h1>お知らせ掲示板</h1>
+<li style="color: cadetblue;">githubよりサイトをアップデートしました。<li>
 <li style="color: cadetblue;">DLSiteでノベルゲーム完全最新作<a href="https://www.dlsite.com/home/work/=/product_id/RJ01370348.html/?utm_medium=social-media&utm_campaign=autopost_new&utm_content=RJ01370348">「夜中のドットカフェ」</a>配信中！。(2025/4/13)</li>
 <h6 style="color: azure;">サイトバージョン：1.10(bx)</h6>
 </div>
